crates/reinhardt-core/crates/macros/tests/ui/model/fail/missing_app_label.stderr
error: String fields require max_length attribute
  --> tests/ui/model/fail/missing_app_label.rs:13:12
   |
13 |     username: String,
   |               ^^^^^^
